--- a/style.css
+++ b/style.css
@@ -40,6 +40,7 @@ input, button, textarea, select {
   border-radius: 10px;
   max-width: 24rem;
   margin: 0 auto;
+  max-height: 80%;
 }
 
 .main__title {
